Parallel execution for InventoryTest and LoginTest