@@ -4,8 +4,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
-import org.openqa.selenium.WebDriver;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
@@ -19,22 +19,19 @@ import com.maupham.demo.pages.ProductItem;
 
 
 public class InventoryTest extends BaseTest {
-    private InventoryPage inventoryPage;
     private CartPage cartPage;
-    private InventoryItemPage inventoryItemPage;
-    private WebDriver driver;
    
-    public InventoryTest() {}
+    private final ThreadLocal<InventoryPage> _inventoryPage = new ThreadLocal<>();
 
     @BeforeMethod 
     public void BeforeMethod() {
-        driver = setUpDriver(); // Khởi tạo WebDriver
-        login(driver); //Đăng nhập vào ứng dụng
-        inventoryPage = new InventoryPage(driver); // Khởi tạo đối tượng InventoryPage
+        login(); //Đăng nhập vào ứng dụng
+        _inventoryPage .set(new InventoryPage(getDriver())); // Khởi tạo đối tượng InventoryPage
     } 
-//->pass
+
     @Test
     public void Test_Addtcart() {
+        var inventoryPage = _inventoryPage.get();
         List<ProductItem> productItems = inventoryPage.getProductItems(); //Lấy danh sách sản phẩm hiện có trên trang
         int expectcount = 0; //Kiểm tra và xác minh số lượng sản phẩm trong giỏ hàng ban đầu là 0
         Assert.assertEquals(inventoryPage.getCartCount(),expectcount);
@@ -56,6 +53,7 @@ public class InventoryTest extends BaseTest {
 
     @Test
     public void test_ClickProductItem() {
+        var inventoryPage = _inventoryPage.get();
          List<ProductItem> productItems = inventoryPage.getProductItems();
        
         for (ProductItem productItem : productItems) {
@@ -65,7 +63,7 @@ public class InventoryTest extends BaseTest {
             String expecttedDescription= productItem.getDescription();
            
             productItem.clickName();
-            inventoryItemPage = new InventoryItemPage(driver);
+            InventoryItemPage inventoryItemPage = new InventoryItemPage(getDriver());
 
             String actualImage = inventoryItemPage.getImage();
             String actualName = inventoryItemPage.getName();
@@ -83,6 +81,7 @@ public class InventoryTest extends BaseTest {
 
     @Test
     public void test_ClickAddtocartdBtn_CartItem() {
+        var inventoryPage = _inventoryPage.get();
         List<ProductItem> productItems = inventoryPage.getProductItems();  //Lấy danh sách các sản phẩm từ trang inventoryPage thông qua phương thức getProductItems().
         for (int i = 0; i < productItems.size(); i++) {
             ProductItem productItem = productItems.get(i);
@@ -93,7 +92,7 @@ public class InventoryTest extends BaseTest {
             productItem.clickAddToCartButton(); //add gio hang
             inventoryPage.clickCartIcon(); //click vao gio hang để kt
 
-            cartPage = new CartPage(driver);
+            cartPage = new CartPage(getDriver());
             List<CartItem> cartItems = cartPage.getCartItems();
             CartItem cartItem = cartItems.get(i);
 
@@ -111,12 +110,13 @@ public class InventoryTest extends BaseTest {
 
     @Test
     public void testSortProductsByPriceLowToHigh() {
+        var inventoryPage = _inventoryPage.get();
         List<ProductItem> productItems = inventoryPage.getProductItems(); //lấy danh sách sp ban đầu
         
-        List<Double> expected = new ArrayList<>(productItems.stream().map(ProductItem::getPrice).toList()); // Tạo danh sách expected chứa giá của sản phẩm ban dau,ánh xạ (map) từng sản phẩm sang giá của nó,chuyển kết quả stream thành danh sách (tolist).
+        List<Double> expected = new ArrayList<>(productItems.stream().map(ProductItem::getPrice).collect(Collectors.toList())); // Tạo danh sách expected chứa giá của sản phẩm ban dau,ánh xạ (map) từng sản phẩm sang giá của nó,chuyển kết quả stream thành danh sách (tolist).
 
         inventoryPage.sortProductByPrice_LowToHight(); //sắp xếp sản phẩm theo giá từ thấp đến cao.
-        List<Double> actual = productItems.stream().map(ProductItem::getPrice).toList(); // Lấy danh sách giá sau khi thực sắp xếp
+        List<Double> actual = productItems.stream().map(ProductItem::getPrice).collect(Collectors.toList()); // Lấy danh sách giá sau khi thực sắp xếp
 
         Assert.assertFalse(expected.equals(actual)); //Kiểm tra danh sách ban đầu và sau khi sắp xếp có khác nhau không(phai đảm bảo khác nhau)
 
@@ -126,11 +126,12 @@ public class InventoryTest extends BaseTest {
 
     @Test
     public void testSortProductsByPriceHighToLow() {
+        var inventoryPage = _inventoryPage.get();
         List<ProductItem> productItems = inventoryPage.getProductItems(); 
-        List<Double> expected = new ArrayList<>(productItems.stream().map(ProductItem::getPrice).toList()); // Tạo danh sách expected chứa giá của sản phẩm ban dau,ánh xạ (map) từng sản phẩm sang giá của nó,chuyển kết quả stream thành danh sách (tolist).
+        List<Double> expected = new ArrayList<>(productItems.stream().map(ProductItem::getPrice).collect(Collectors.toList())); // Tạo danh sách expected chứa giá của sản phẩm ban dau,ánh xạ (map) từng sản phẩm sang giá của nó,chuyển kết quả stream thành danh sách (tolist).
 
         inventoryPage.sortProductByPrice_HightToLow(); //sắp xếp sản phẩm theo giá từ thấp đến cao.
-        List<Double> actual = productItems.stream().map(ProductItem::getPrice).toList(); // Lấy danh sách giá sau khi thực sắp xếp
+        List<Double> actual = productItems.stream().map(ProductItem::getPrice).collect(Collectors.toList()); // Lấy danh sách giá sau khi thực sắp xếp
        
         Assert.assertFalse(expected.equals(actual)); //Kiểm tra danh sách ban đầu và sau khi sắp xếp có khác nhau không(phai đảm bảo khác nhau)
       
@@ -141,11 +142,12 @@ public class InventoryTest extends BaseTest {
     
     @Test
     public void testSortProductsByNameAtoZ() {
+        var inventoryPage = _inventoryPage.get();
         List<ProductItem> productItems = inventoryPage.getProductItems();
-        List<String> expected = new ArrayList<>(productItems.stream().map(ProductItem::getName).toList()); 
+        List<String> expected = new ArrayList<>(productItems.stream().map(ProductItem::getName).collect(Collectors.toList())); 
 
         inventoryPage.sortProductByName_ZToA();                                                    
-        List<String> actual = productItems.stream().map(ProductItem::getName).toList();                  
+        List<String> actual = productItems.stream().map(ProductItem::getName).collect(Collectors.toList());                  
 
         Assert.assertFalse(expected.equals(actual));                                                     
 
@@ -155,7 +157,7 @@ public class InventoryTest extends BaseTest {
 
     @AfterMethod
     public  void AfterMethod() {
-        driver.close();
+        _inventoryPage.remove();
     }
 }
 
